Lots of HTML changes
- table.list is now table.ipb_table
- cycle('even', 'odd') is now cycle('row1', 'row2')
- 'hidden' is now 'hide'
- breadcrumb now behaves differently, it provides content_for(:breadcrumb) so we get to use the skin's pretty breadcrumbing.
- Add a few custom overrides to lootfactor.sass, but for the most part we're relying on Splat's CSS.
- Add the Admin bar to the LF page. It doesn't really fit with the scope, but let's be consistent I guess.

--- a/app/views/achievements/index.html.haml
+++ b/app/views/achievements/index.html.haml
@@ -2,7 +2,7 @@
   $(document).ready(function() {
     $('#achievements img').tooltip({ showURL: false });
   });
-%table.list
+%table.ipb_table
   %thead
     %tr
       %th &nbsp;
@@ -10,7 +10,7 @@
         %th.bullet= achievement_icon(ach)
   %tbody#achievements
     - @members.each do |member|
-      %tr{ :class => cycle('even', 'odd') }
+      %tr{ :class => cycle('row1', 'row2') }
         %td= link_to_member(member)
         - @achievements.each do |ach|
           %td.bullet= image_tag('bullet_yellow.png', :alt => 'Incomplete', :class => 'help', :title => "#{member.name} - #{ach.title}") unless member.achievements.include? ach
