--- a/app/views/items/_context_menu.html.haml
+++ b/app/views/items/_context_menu.html.haml
@@ -3,5 +3,5 @@
     $(document).ready(function() {
       itemContextMenu();
     });
-  %ul#itemContextMenu.contextMenu.hidden
+  %ul#itemContextMenu.contextMenu.hide
     %li.edit= link_to('Edit Item', '#edit')
