--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -7,7 +7,7 @@
     });
   });
 
-%h2= breadcrumb link_to('Items', items_path), link_to_wowhead(@item, :refreshable => true)
+- breadcrumb link_to('Items', items_path), link_to_wowhead(@item, :refreshable => true)
 - unless @loot_table.nil?
   %h3= "Dropped by #{@loot_table.parent.object.name} in #{@loot_table.parent.parent.object.name}"
 = render :partial => 'loots/context_menu' if admin?
@@ -16,7 +16,7 @@
     %li= link_to_tab("Loots (#{@loots.size})", '#t-loots')
     %li= link_to_tab("Wishlists (#{@wishlists.size})", '#t-wishlists')
   #t-loots
-    %table#loot.list.tablesorter
+    %table#loot.ipb_table.tablesorter
       %thead
         %tr
           %th.date Raid
@@ -25,13 +25,13 @@
           %th.number Price
       %tbody#itemfilter
         - @loots.each do |loot|
-          %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }[loot]
+          %tr{ :class => cycle('row1', 'row2') + ' ' + loot_row_classes(loot) }[loot]
             %td.date= link_to h(loot.purchased_on), raid_path(loot.raid_id) unless loot.raid_id.nil?
             %td.member= link_to_member(loot.member)
             %td.note[@item]= loot_tell_types(loot)
             %td.number= loot_factor(loot.adjusted_price)
   #t-wishlists
-    %table.list
+    %table.ipb_table
       %thead
         %tr
           %th Member
@@ -39,7 +39,7 @@
           %th Priority
       %tbody
         - @wishlists.each do |wishlist|
-          %tr{ :class => cycle('even', 'odd') }
+          %tr{ :class => cycle('row1', 'row2') }
             %td.member{ :style => 'max-width: 150px' }= link_to_member(wishlist.member)
             %td{ :style => 'width: 60%' }= truncate(h(wishlist.note), :length => 80)
             %td{ :style => 'width: 100px'}= h(wishlist.priority.titlecase)
