--- a/app/views/loots/_context_menu.html.haml
+++ b/app/views/loots/_context_menu.html.haml
@@ -3,6 +3,6 @@
     $(document).ready(function() {
       lootContextMenu();
     });
-  %ul#lootContextMenu.contextMenu.hidden
+  %ul#lootContextMenu.contextMenu.hide
     %li.edit= link_to('Edit Item', '#edit_item')
     %li.edit= link_to('Edit Loot', '#edit_loot')
