--- a/app/views/loots/index.html.haml
+++ b/app/views/loots/index.html.haml
@@ -1,7 +1,7 @@
 = render :partial => 'loots/context_menu' if admin?
 = will_paginate @loots
 %br
-%table.list
+%table.ipb_table
   %thead
     %tr
       %th Name
@@ -11,7 +11,7 @@
       %th.number Price
   %tbody
     - @loots.each do |loot|
-      %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }[loot]
+      %tr{ :class => cycle('row1', 'row2') + ' ' + loot_row_classes(loot) }[loot]
         %td[loot.item]= link_to_item_with_stats(loot.item)
         %td= link_to_member(loot.member)
         %td= loot_tell_types(loot)
