--- a/app/views/members/_context_menu.html.haml
+++ b/app/views/members/_context_menu.html.haml
@@ -3,5 +3,5 @@
     $(document).ready(function() {
       memberContextMenu();
     });
-  %ul#memberContextMenu.contextMenu.hidden
+  %ul#memberContextMenu.contextMenu.hide
     %li.edit= link_to('Edit Member', '#edit')
