--- a/app/views/members/_wishlist.html.haml
+++ b/app/views/members/_wishlist.html.haml
@@ -3,7 +3,7 @@
     sortWishlistTable();
     $('.help').tooltip({ showURL: false });
   });
-%table#wishlists.list.tablesorter
+%table#wishlists.ipb_table.tablesorter
   %thead
     %tr
       %th.icon &nbsp;
