--- a/app/views/raids/_context_menu.html.haml
+++ b/app/views/raids/_context_menu.html.haml
@@ -4,5 +4,5 @@
       raidContextMenu();
     });
 
-  %ul#raidContextMenu.contextMenu.hidden
+  %ul#raidContextMenu.contextMenu.hide
     %li.edit= link_to('Edit Raid', '#edit')
