--- a/app/views/index/_common_items.html.haml
+++ b/app/views/index/_common_items.html.haml
@@ -1,11 +1,11 @@
 %h4 Most Common Drops
-%table.list
+%table.ipb_table
   %thead
     %tr
       %th Item
       %th.number Loots
   %tbody
     - common_items.each do |item|
-      %tr{ :class => cycle('even', 'odd') }
+      %tr{ :class => cycle('row1', 'row2') }
         %td= link_to_item_with_stats(item)
         %td.number= h(item.loots_count)
