--- a/app/views/index/_fragment_progress.html.haml
+++ b/app/views/index/_fragment_progress.html.haml
@@ -1,12 +1,12 @@
 %h4= link_to_item_with_stats(Item.find_by_name("Fragment of Val'anyr")) + " Progress"
-%table.list
+%table.ipb_table
   %thead
     %tr
       %th Member
       %th Progress
   %tbody
     - fragment_progress.each do |member_id,count|
-      %tr{ :class => cycle('even', 'odd') }
+      %tr{ :class => cycle('row1', 'row2') }
         %td= link_to_member(Member.find(member_id))
         %td.note
           = progress_bar(:width => count.to_f/30.00, :container_width => 80, :color => "#FF8000")
