--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -1,6 +1,6 @@
 %h2= breadcrumb link_to('Members', members_path), link_to_member(@member), 'Edit'
 %fieldset
-  %legend.hidden Edit Member
+  %legend.hide Edit Member
   
   - form_for @member do |f|
     - unless f.error_messages.empty?
