--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -3,7 +3,7 @@
     membersTableSort();
   });
 = render :partial => 'members/context_menu' if admin?
-%table#index.list.tablesorter
+%table#index.ipb_table.tablesorter
   %thead
     %tr
       %th &nbsp;
@@ -18,7 +18,7 @@
         %th.lootfactor Situational
   %tbody
     - @members.each do |member|
-      %tr{ :class => cycle('even', 'odd') }
+      %tr{ :class => cycle('row1', 'row2') }
         %td.icon= image_tag("classes/#{member.wow_class.downcase.gsub(/\s+/, '_')}.gif", :alt => member.wow_class) unless member.wow_class.nil?
         %td.member{ :class => ( member.user_id.nil? ) ? 'user-missing' : '' }= link_to_member(member)
         %td= h(member.rank.name) unless member.rank.nil?
