--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,17 +1,18 @@
+- breadcrumb 'Items'
 = render :partial => 'items/context_menu' if admin?
-= will_paginate(@items)
-%br
-%table.ipb_table
-  %thead
-    %tr
-      %th Name
-      %th Loots
-      %th Wishlists
-  %tbody
-    - @items.each do |item|
-      %tr{ :class => cycle('row1', 'row2') }[item]
-        %td.item= link_to_item_with_stats(item)
-        %td= h(item.loots.size)
-        %td= h(item.wishlists.size)
-%br
+= will_paginate @items
+%div.category_block.block_wrap
+  = maintitle
+  %table.ipb_table
+    %thead
+      %tr
+        %th Name
+        %th Loots
+        %th Wishlists
+    %tbody
+      - @items.each do |item|
+        %tr{ :class => cycle('row1', 'row2') }[item]
+          %td.item= link_to_item_with_stats(item)
+          %td= h(item.loots.size)
+          %td= h(item.wishlists.size)
 = will_paginate @items
