--- a/app/views/raids/index.html.haml
+++ b/app/views/raids/index.html.haml
@@ -1,19 +1,20 @@
+- breadcrumb 'Raids'
 = render :partial => 'raids/context_menu' if admin?
 = will_paginate @raids
-%br
-%table.ipb_table
-  %thead
-    %tr
-      %th.date Date
-      %th.number Attendees
-      %th.number Loots
-      %th.note Note
-  %tbody
-    - @raids.each do |raid|
-      %tr{ :class => cycle('row1', 'row2') }
-        %td.date= link_to h(raid.date), raid_path(raid)
-        %td.number= h(raid.attendees.size)
-        %td.number= h(raid.loots.size)
-        %td.note= h(raid.note)
-%br
+%div.category_block.block_wrap
+  = maintitle
+  %table.ipb_table
+    %thead
+      %tr
+        %th.date Date
+        %th.number Attendees
+        %th.number Loots
+        %th.note Note
+    %tbody
+      - @raids.each do |raid|
+        %tr{ :class => cycle('row1', 'row2') }
+          %td.date= link_to h(raid.date), raid_path(raid)
+          %td.number= h(raid.attendees.size)
+          %td.number= h(raid.loots.size)
+          %td.note= h(raid.note)
 = will_paginate @raids
