--- a/app/views/loots/index.html.haml
+++ b/app/views/loots/index.html.haml
@@ -1,21 +1,22 @@
+- breadcrumb 'Loots'
 = render :partial => 'loots/context_menu' if admin?
 = will_paginate @loots
-%br
-%table.ipb_table
-  %thead
-    %tr
-      %th Name
-      %th Buyer
-      %th Notes
-      %th.date Raid
-      %th.number Price
-  %tbody
-    - @loots.each do |loot|
-      %tr{ :class => cycle('row1', 'row2') + ' ' + loot_row_classes(loot) }[loot]
-        %td[loot.item]= link_to_item_with_stats(loot.item)
-        %td= link_to_member(loot.member)
-        %td= loot_tell_types(loot)
-        %td.date= link_to h(loot.purchased_on), raid_path(loot.raid) unless loot.raid.nil?
-        %td.number= loot_factor(loot.adjusted_price)
-%br
+%div.category_block.block_wrap
+  = maintitle
+  %table.ipb_table
+    %thead
+      %tr
+        %th Name
+        %th Buyer
+        %th Notes
+        %th.date Raid
+        %th.number Price
+    %tbody
+      - @loots.each do |loot|
+        %tr{ :class => cycle('row1', 'row2') + ' ' + loot_row_classes(loot) }[loot]
+          %td[loot.item]= link_to_item_with_stats(loot.item)
+          %td= link_to_member(loot.member)
+          %td= loot_tell_types(loot)
+          %td.date= link_to h(loot.purchased_on), raid_path(loot.raid) unless loot.raid.nil?
+          %td.number= loot_factor(loot.adjusted_price)
 = will_paginate @loots
