--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -2,30 +2,33 @@
   $(document).ready(function() {
     membersTableSort();
   });
+- breadcrumb 'Members'
 = render :partial => 'members/context_menu' if admin?
-%table#index.ipb_table.tablesorter
-  %thead
-    %tr
-      %th &nbsp;
-      %th{ :style => 'min-width: 150px' } Name
-      %th Rank
-      %th.attendance 30-Day
-      %th.attendance 90-Day
-      %th.attendance Lifetime
-      - if admin?
-        %th.lootfactor Loot Factor
-        %th.lootfactor Best in Slot
-        %th.lootfactor Situational
-  %tbody
-    - @members.each do |member|
-      %tr{ :class => cycle('row1', 'row2') }
-        %td.icon= image_tag("classes/#{member.wow_class.downcase.gsub(/\s+/, '_')}.gif", :alt => member.wow_class) unless member.wow_class.nil?
-        %td.member{ :class => ( member.user_id.nil? ) ? 'user-missing' : '' }= link_to_member(member)
-        %td= h(member.rank.name) unless member.rank.nil?
-        %td.attendance= member_attendance_colored(member.attendance_30)
-        %td.attendance= member_attendance_colored(member.attendance_90)
-        %td.attendance= member_attendance_colored(member.attendance_lifetime)
+%div.category_block.block_wrap
+  = maintitle
+  %table#index.ipb_table.tablesorter
+    %thead
+      %tr
+        %th &nbsp;
+        %th{ :style => 'min-width: 150px' } Name
+        %th Rank
+        %th.attendance 30-Day
+        %th.attendance 90-Day
+        %th.attendance Lifetime
         - if admin?
-          %td.lootfactor= loot_factor(member.lf)
-          %td.lootfactor= loot_factor(member.bislf)
-          %td.lootfactor= loot_factor(member.sitlf)
+          %th.lootfactor Loot Factor
+          %th.lootfactor Best in Slot
+          %th.lootfactor Situational
+    %tbody
+      - @members.each do |member|
+        %tr{ :class => cycle('row1', 'row2') }
+          %td.icon= image_tag("classes/#{member.wow_class.downcase.gsub(/\s+/, '_')}.gif", :alt => member.wow_class) unless member.wow_class.nil?
+          %td.member{ :class => ( member.user_id.nil? ) ? 'user-missing' : '' }= link_to_member(member)
+          %td= h(member.rank.name) unless member.rank.nil?
+          %td.attendance= member_attendance_colored(member.attendance_30)
+          %td.attendance= member_attendance_colored(member.attendance_90)
+          %td.attendance= member_attendance_colored(member.attendance_lifetime)
+          - if admin?
+            %td.lootfactor= loot_factor(member.lf)
+            %td.lootfactor= loot_factor(member.bislf)
+            %td.lootfactor= loot_factor(member.sitlf)
