--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -5,36 +5,39 @@
     });
   });
   
-%h2= breadcrumb link_to('Members', members_path), link_to_armory(@member)
-#stats
-  %h3
-    = member_attendance_colored(@member.attendance_30)
-    %span.small 30-day attendance
-  %h3
-    = member_attendance_colored(@member.attendance_90)
-    %span.small 90-day
-  %h3
-    = member_attendance_colored(@member.attendance_lifetime)
-    %span.small Lifetime
-  %br
-  %h3
-    = loot_factor(@member.lf)
-    %span.small Loot Factor
-  %h3
-    = loot_factor(@member.bislf)
-    %span.small Best in Slot
-  %h3
-    = loot_factor(@member.sitlf)
-    %span.small Situational
-#member_tabs
-  %ul
-    %li= link_to_tab("Raids",        '#t-raids')
-    %li= link_to("Loots",            member_path(@member) + '/t.loots')
-    %li= link_to_tab("Wishlist",     member_path(@member) + '/t.wishlist')
-    %li= link_to_tab('Achievements', member_path(@member) + '/t.achievements')
-    %li= link_to_tab("Punishments",  member_path(@member) + '/t.punishments')
-  #t-raids= render :partial => 'members/raids'
-  #t-loots
-  #t-wishlist
-  #t-achievements
-  #t-punishments
+- breadcrumb link_to('Members', members_path), link_to_armory(@member)
+%div.category_block.block_wrap
+  #member_stats
+    %h3
+      = member_attendance_colored(@member.attendance_30)
+      %span.small 30-day attendance
+    %h3
+      = member_attendance_colored(@member.attendance_90)
+      %span.small 90-day
+    %h3
+      = member_attendance_colored(@member.attendance_lifetime)
+      %span.small Lifetime
+    %br
+    %h3
+      = loot_factor(@member.lf)
+      %span.small Loot Factor
+    %h3
+      = loot_factor(@member.bislf)
+      %span.small Best in Slot
+    %h3
+      = loot_factor(@member.sitlf)
+      %span.small Situational
+      
+%div.category_block.block_wrap
+  #member_tabs
+    %ol.tab_bar.no_title.mini
+      %li.tab_toggle= link_to("Raids",        '#t-raids')
+      %li.tab_toggle= link_to("Loots",        member_path(@member) + '/t.loots')
+      %li.tab_toggle= link_to("Wishlist",     member_path(@member) + '/t.wishlist')
+      %li.tab_toggle= link_to('Achievements', member_path(@member) + '/t.achievements')
+      %li.tab_toggle= link_to("Punishments",  member_path(@member) + '/t.punishments')
+    #t-raids= render :partial => 'members/raids'
+    #t-loots
+    #t-wishlist
+    #t-achievements
+    #t-punishments
