--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -1,44 +1,45 @@
 - if @zone and @boss
-  %h2= breadcrumb link_to('Global Wishlist View', wishlists_path), @zone, @boss
+  - breadcrumb link_to('Global Wishlist View', wishlists_path), @zone, @boss
 - else
-  %h2= breadcrumb link_to('Global Wishlist View', wishlists_path)
-#content
-  - @items.each do |item|
-    %div[item]
-      %h4
-        = link_to_function(image_tag('clipboard.png'), "wishlistCompare(#{item.id})")
-        %span= link_to_item_with_stats(item.object)
-        - unless item.note.nil?
-          = "(#{h(item.note)})"
-      %table.ipb_table.tablesorter
-        %thead.hide
-          %tr
-            %th Member
-            %th Note
-            %th Priority
-            %th LF
-        %tbody
-          - reset_cycle
-          - item.object.wishlists.each do |wishlist|
-            - if wishlist.member.active?
-              %tr{ :class => cycle('row1', 'row2') }
-                %td.member{ :style => 'max-width: 150px' }
-                  = warn_if_recently_looted(wishlist, @recent_loots)
-                  = link_to_member(wishlist.member)
-                %td{ :style => 'width: 60%' }= h(wishlist.note)
-                %td{ :style => 'width: 100px'}= h(wishlist.priority.titlecase)
-                %td.lootfactor= loot_factor(wishlist.member.lf_type(wishlist.priority))
-  %br
-  .notice.hide
-#sidebar
-  %ul
-    - @root.each do |zone|
-      %li.zone
-        = link_to_function(h(zone.object.name), "$('ul#loot_table_#{zone.id}').toggle('slow')")
-        %ul.hide[zone]
-          - zone.children.each do |boss|
-            %li.boss[boss]
-              = link_to h(boss.object.name), "?boss=#{boss.id}"
+  - breadcrumb link_to('Global Wishlist View', wishlists_path)
+%div.category_block.block_wrap
+  #content
+    - @items.each do |item|
+      %div[item]
+        %h4
+          = link_to_function(image_tag('clipboard.png'), "wishlistCompare(#{item.id})")
+          %span= link_to_item_with_stats(item.object)
+          - unless item.note.nil?
+            = "(#{h(item.note)})"
+        %table.ipb_table.tablesorter
+          %thead.hide
+            %tr
+              %th Member
+              %th Note
+              %th Priority
+              %th LF
+          %tbody
+            - reset_cycle
+            - item.object.wishlists.each do |wishlist|
+              - if wishlist.member.active?
+                %tr{ :class => cycle('row1', 'row2') }
+                  %td.member{ :style => 'max-width: 150px' }
+                    = warn_if_recently_looted(wishlist, @recent_loots)
+                    = link_to_member(wishlist.member)
+                  %td{ :style => 'width: 60%' }= h(wishlist.note)
+                  %td{ :style => 'width: 100px'}= h(wishlist.priority.titlecase)
+                  %td.lootfactor= loot_factor(wishlist.member.lf_type(wishlist.priority))
+    %br
+    .notice.hide
+  #sidebar
+    %ul
+      - @root.each do |zone|
+        %li.zone
+          = link_to_function(h(zone.object.name), "$('ul#loot_table_#{zone.id}').toggle('slow')")
+          %ul.hide[zone]
+            - zone.children.each do |boss|
+              %li.boss[boss]
+                = link_to h(boss.object.name), "?boss=#{boss.id}"
      
 - unless @zone.nil? or @boss.nil?
   :javascript
