Achievement padding, tooltip fixes

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -25,12 +25,15 @@
   border: 1px solid
     color = !notice_border_color
   background-color = !notice_background
-  padding: 10px
+  padding: 5px
   -moz-border-radius: 5px
 }
 #tooltip 
   h3, div
     margin: 0
+    color: #000000
+  h3
+    font-size: 1em
     
 // Index#index
 body#index
@@ -145,8 +148,8 @@ table.ipb_table
     padding: 0
   th.bullet, td.bullet
     text-align: center
-    width: 10px
-    padding: 0
+    width: 16px
+    padding: 2px
   th.center, td.center
     text-align: center
     
