--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -1,14 +1,12 @@
-%h2= breadcrumb link_to('Members', members_path), link_to_member(@member), 'Edit'
-%fieldset
-  %legend.hide Edit Member
-  
-  - form_for @member do |f|
-    - unless f.error_messages.empty?
-      .error= f.error_messages
-  
-    = render :partial => 'form', :object => f
-    
-    .buttons
-      = styled_button(:type => 'submit', :image => 'tick.png', :text => 'Save')
-      = styled_button(:type => 'reset', :image => 'form_delete.png')
-      = link_to_delete(:path => member_path(@member))
+- breadcrumb link_to('Members', members_path), link_to_member(@member), 'Edit'
+- semantic_form_for @member do |form|
+  - form.inputs do
+    = form.input :name
+    = form.input :wow_class, :as => :select, :collection => Member::WOW_CLASSES, :label => 'Class'
+    = form.input :rank_id, :as => :select, :collection => @ranks.collect { |r| [r.name, r.id] }, :include_blank => true, :required => false
+    = form.input :user_id, :as => :select, :collection => @users.collect { |u| [u.name, u.id] }, :include_blank => true, :required => false
+    = form.input :active, :as => :boolean
+  - form.buttons :class => 'submit' do
+    = form.submit 'Save Member', :class => 'input_submit'
+    or
+    = link_to_delete(:path => member_path(@member), :image => false, :class => 'cancel')
